--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="background"></div>
+    <div class="background">
+        <div class="clockAnimation"></div>
+    </div>
 </body>
 </html>
